cors had issue conect with frontend had loopissue fixed