@@ -4,15 +4,15 @@ import com.nexus_ledger.nexusLedger.security.OAuth2SuccessHandler;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.reactive.CorsConfigurationSource;
-import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -24,23 +24,19 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // 1. Disable CSRF for our Stateless API (Common in JWT architectures)
+                // Link the CORS configuration here
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
 
-                // 2. Define the "Guard Rules"
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/", "/login/**", "/error").permitAll() // Public access
-                        .requestMatchers("/api/ledger/**").authenticated()       // Private access
+                        .requestMatchers("/", "/login/**", "/error", "/oauth2/**").permitAll()
+                        .requestMatchers("/api/ledger/**", "/api/user/**").authenticated()
                         .anyRequest().authenticated()
                 )
 
-                // 3. Configure OAuth2 Social Login
                 .oauth2Login(oauth2 -> oauth2
                         .successHandler(oauthSuccessHandler)
                 );
-
-                // 4. Configure Token-Based Security (JWT)
-                //.oauth2ResourceServer(oauth -> oauth.jwt(Customizer.withDefaults()));
 
         return http.build();
     }
@@ -48,16 +44,20 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+
+        // Industry Best Practice: Be explicit with your frontend URL
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setAllowCredentials(true); // Crucial for Session Cookies!
+
+        // Allow necessary headers for auth and JSON
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+
+        // CRITICAL: This allows the browser to save and send the JSESSIONID cookie
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-// Then add .cors(Customizer.withDefaults()) to your filterChain
-
 }
